ingress-file/ingress-for-shop.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: docschina-shop
  # 声明命名空间
  namespace: kube-public
  # 自定义注解(声明ingress controller),traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    # http 重定向到 https
    ingress.kubernetes.io/ssl-redirect: "True"
spec:
  tls:
    - hosts:
        - shop.docschina.org
      secretName: star.docschina.org
  rules:
    - host: shop.docschina.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: docschina-shop
                port:
                  number: 30252
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: docschina-shop
                port:
                  number: 30252
          - path: /cms
            pathType: Prefix
            backend:
              service:
                name: docschina-shop
                port:
                  number: 30252
          - path: /i18n
            pathType: Prefix
            backend:
              service:
                name: docschina-shop
                port:
                  number: 30252
          - path: /content-manager
            pathType: Prefix
            backend:
              service:
                name: docschina-shop
                port:
                  number: 30252
          - path: /content-type-builder
            pathType: Prefix
            backend:
              service:
                name: docschina-shop
                port:
                  number: 30252
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: docschina-shop
                port:
                  number: 30252
          - path: /email
            pathType: Prefix
            backend:
              service:
                name: docschina-shop
                port:
                  number: 30252
          - path: /users-permissions
            pathType: Prefix
            backend:
              service:
                name: docschina-shop
                port:
                  number: 30252
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docschina-shop
                port:
                  number: 30252

status:
  loadBalancer:
    ingress:
      - ip: 111.229.109.39
      - ip: 150.158.119.148
