ingress-file/ingress-for-website.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: docschina-website
  # 声明命名空间
  namespace: kube-public
  # 自定义注解(声明ingress controller),traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    # http 重定向到 https
    ingress.kubernetes.io/ssl-redirect: "True"
spec:
  tls:
    - hosts:
        - rollup.docschina.org
        - webpack.docschina.org
        - webpack4.docschina.org
        # - v4.webpack.docschina.org
        - recoil.docschina.org
        - babel.docschina.org
        - esbuild.docschina.org
        - markdonw-it.docschina.org
        - mdpress.docschina.org
        - stencil.docschina.org
        - ecma262.docschina.org
        - gfm.docschina.org
        - react.docschina.org
      secretName: star.docschina.org
  rules:
    - host: rollup.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollup-docs-cn
                port:
                  number: 8082
    - host: webpack.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpack5
                port:
                  number: 8083
    - host: webpack4.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpack4
                port:
                  number: 8084
    # - host: v4.webpack.docschina.org
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: webpack4
    #             port:
    #               number: 8084
    - host: babel.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: babel
                port:
                  number: 8085
    - host: recoil.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recoil
                port:
                  number: 8086
    - host: esbuild.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: esbuild
                port:
                  number: 8087
    - host: markdown-it.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: markdown-it
                port:
                  number: 8088
    - host: mdpress.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mdpress
                port:
                  number: 8089
    - host: stencil.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stencil
                port:
                  number: 8090
    - host: ecma262.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecma262
                port:
                  number: 8091
    - host: gfm.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gfm
                port:
                  number: 8092
    - host: react.docschina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react
                port:
                  number: 8093
